# hue-blend

./: .gitignore  README.md
express/: .eslintrc.js  Dockerfile  build.sh  package-lock.json  package.json  tsconfig.json  webpack.config.js
express/src/: colorManager.test.ts  colorManager.ts  envValidator.ts  hue.ts  index.ts  logging.ts  state.ts
hue-chart/: Chart.yaml  build.sh  values.yaml
hue-chart/templates/: NOTES.txt  _helpers.tpl  ddns-updater.ingress-route.yaml  default.ingress-route.yaml  deployment.yaml  hpa.yaml  hue-express.deployment.yaml  ingress.yaml  rust-hue.deployment.yaml  service.yaml  serviceaccount.yaml
hue-chart/templates/cert-manager/: lets-encrypt.clusterissuer.yaml  lets-encrypt.clusterissuer.yml  lf-k8s.certificate.yaml
hue-chart/templates/hue/: hue-express.deployment.yaml  hue-express.secret.yaml  hue.ingress-route.yaml  ingress-route.yaml  rust-hue.deployment.yaml  rust-hue.secret.yaml
hue-chart/templates/registry/: image-pull-secret.yaml  registry.deployment.yaml  registry.deployment.yml  registry.ingress-route.yaml  registry.namespace.yaml  registry.secret.yaml
hue-chart/templates/tests/: test-connection.yaml
hue-chart/templates/traefik/: dashboard.ingress-route.yaml
rust/: Cargo.toml  Dockerfile  Rocket.toml  build.sh  docker-compose.yml  sc
rust/k8s/: create-secret.sh  deployment.yml
rust/src/: fairing.rs  main.rs  schedule.rs  sunset.rs  time.rs
