[package]
name = "rust-hue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.5"
dotenvy = "0.15.7"
rocket = { version = "0.5.1", features = ["json"] }
sunrise = "1.0.1"
serde_yaml = "0.9"
anyhow = "1.0.86"